--- a/Team_SSS/Base.lproj/Main.storyboard
+++ b/Team_SSS/Base.lproj/Main.storyboard
@@ -169,21 +169,35 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="134.59821428571428"/>
         </scene>
-        <!--View Controller-->
+        <!--기타 사유 신고-->
         <scene sceneID="oyr-Jl-ttE">
             <objects>
                 <viewController id="5dg-aB-bn2" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="j1X-b3-4eR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5ng-TA-rlc">
+                                <rect key="frame" x="0.0" y="88" width="414" height="1"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lr7-GN-TC7">
+                                <rect key="frame" x="20" y="147" width="374" height="1"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ToB-Xv-lOR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="V9b-0G-sxs"/>
+                    <navigationItem key="navigationItem" title="기타 사유 신고" id="V9b-0G-sxs">
+                        <barButtonItem key="rightBarButtonItem" title="신고" id="H8J-l6-3f4"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zRd-G5-a3O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1880" y="135"/>
+            <point key="canvasLocation" x="1879.7101449275365" y="134.59821428571428"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="PZH-5N-BEk">
@@ -200,21 +214,90 @@
             </objects>
             <point key="canvasLocation" x="1880" y="785"/>
         </scene>
-        <!--View Controller-->
+        <!--헬멧 미착용 신고-->
         <scene sceneID="AP2-q6-6yn">
             <objects>
-                <viewController id="N4E-Xd-VrD" sceneMemberID="viewController">
+                <viewController id="N4E-Xd-VrD" customClass="NoHelmetViewController" customModule="Team_SSS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nnN-Bz-wrh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LcN-kn-Mss">
+                                <rect key="frame" x="0.0" y="812" width="414" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QW2-1Y-k0u">
+                                        <rect key="frame" x="8" y="10" width="41" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="photo" catalog="system"/>
+                                        <connections>
+                                            <action selector="addImageButton:" destination="N4E-Xd-VrD" eventType="touchUpInside" id="PyP-ma-64i"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0/1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xD-kC-xbL">
+                                        <rect key="frame" x="57" y="15" width="34" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GpO-Pl-Anz">
+                                        <rect key="frame" x="99" y="10" width="41" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="camera" catalog="system"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dRJ-ey-tJ5">
+                                <rect key="frame" x="0.0" y="812" width="414" height="1"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wEI-PL-bhZ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="1"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YMC-Id-raT">
+                                <rect key="frame" x="20" y="147" width="374" height="1"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="헬멧 미착용" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24r-Uy-8OI">
+                                <rect key="frame" x="20" y="108" width="374" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M9E-pn-OWt">
+                                <rect key="frame" x="20" y="166" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="uei-8l-GbN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="D9w-6D-ISO"/>
+                    <navigationItem key="navigationItem" title="헬멧 미착용 신고" id="D9w-6D-ISO">
+                        <barButtonItem key="rightBarButtonItem" title="신고" id="Jcg-9K-Fvl">
+                            <connections>
+                                <action selector="reportButtonClicked:" destination="N4E-Xd-VrD" id="5fy-vY-gPq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="thumbnailImageView" destination="M9E-pn-OWt" id="W5r-1T-5RM"/>
+                        <outlet property="videoCountLabel" destination="3xD-kC-xbL" id="vCi-Lb-d3m"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5QT-V2-4Bp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1880" y="-508"/>
+            <point key="canvasLocation" x="1879.7101449275365" y="-508.25892857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ssQ-fV-KtO">
@@ -236,8 +319,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="camera" catalog="system" width="128" height="94"/>
         <image name="helmet" width="512" height="512"/>
         <image name="more" width="512" height="512"/>
+        <image name="photo" catalog="system" width="128" height="93"/>
         <image name="scooter" width="512" height="512"/>
         <image name="warning" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
