--- a/Team_SSS/Base.lproj/Main.storyboard
+++ b/Team_SSS/Base.lproj/Main.storyboard
@@ -188,7 +188,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain"/>
                                         <connections>
-                                            <segue destination="6PX-g0-jDX" kind="presentation" id="lMO-NN-QaI"/>
+                                            <action selector="goToWebpage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ngm-5j-BB7"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -335,30 +335,6 @@
             </objects>
             <point key="canvasLocation" x="1879.7101449275365" y="134.59821428571428"/>
         </scene>
-        <!--Report Rules View Controller-->
-        <scene sceneID="h2n-P2-5Qm">
-            <objects>
-                <viewController id="6PX-g0-jDX" customClass="reportRulesViewController" customModule="Team_SSS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="uwx-KV-RZo">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="신고 규정" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJJ-hs-6Hp">
-                                <rect key="frame" x="20" y="20" width="374" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="jea-Ds-vfV"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6IA-84-ff9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1880" y="783"/>
-        </scene>
         <!--헬멧 미착용 신고-->
         <scene sceneID="AP2-q6-6yn">
             <objects>
@@ -367,9 +343,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LcN-kn-Mss">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcN-kn-Mss">
                                 <rect key="frame" x="0.0" y="812" width="414" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QW2-1Y-k0u">
                                         <rect key="frame" x="8" y="10" width="41" height="31"/>
@@ -397,6 +372,9 @@
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="v7E-Pl-zYi"/>
+                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dRJ-ey-tJ5">
                                 <rect key="frame" x="0.0" y="812" width="414" height="1"/>
@@ -427,6 +405,11 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="uei-8l-GbN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LcN-kn-Mss" firstAttribute="leading" secondItem="uei-8l-GbN" secondAttribute="leading" id="JRV-zg-UTs"/>
+                            <constraint firstItem="LcN-kn-Mss" firstAttribute="bottom" secondItem="uei-8l-GbN" secondAttribute="bottom" id="Nq5-F8-97M"/>
+                            <constraint firstItem="LcN-kn-Mss" firstAttribute="trailing" secondItem="uei-8l-GbN" secondAttribute="trailing" id="s5t-yp-RUJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="헬멧 미착용 신고" id="D9w-6D-ISO">
                         <barButtonItem key="rightBarButtonItem" title="신고" id="Jcg-9K-Fvl">
