feat: 카메라 촬영 기능 추가

--- a/Team_SSS/Base.lproj/Main.storyboard
+++ b/Team_SSS/Base.lproj/Main.storyboard
@@ -371,6 +371,9 @@
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="camera" catalog="system"/>
+                                        <connections>
+                                            <action selector="cameraButton:" destination="N4E-Xd-VrD" eventType="touchUpInside" id="ZGZ-7w-X9I"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0/1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xD-kC-xbL">
                                         <rect key="frame" x="57" y="15" width="34" height="21"/>
